Fixed align-wide blocks being cut off on smaller screen sizes.

--- a/resources/scss/utilities/_alignment.scss
+++ b/resources/scss/utilities/_alignment.scss
@@ -52,34 +52,44 @@
 }
 
 // Align full and wide classes.
-.alignfull,
-.alignwide {
+.alignfull {
 	margin-left: calc( -100vw / 2 + 100% / 2);
 	margin-right: calc( -100vw / 2 + 100% / 2);
 	width: auto;
 	max-width: 100vw;
 
 	// prevent content from going too wide in nested blocks
-	.alignfull,
-	.alignwide {
+	.alignfull {
 		margin-left: auto;
 		margin-right: auto;
 	}
 }
 
-@include breakpoints.breakpoint(md) {
+.alignwide {
 
-	// We have to check for `.alignfull` because
-	// some blocks still include both classes.
-	.alignwide:not(.alignfull) {
+	@include breakpoints.breakpoint(md) {
+		max-width: calc(100% + 2 * var(--space-xl));
+		margin-left: calc(-1 * var(--space-xl));
+		margin-right: calc(-1 * var(--space-xl));
+
+		.alignwide {
+			max-width: calc(100% + var(--space-xl));
+		}
+	}
+
+	@include breakpoints.breakpoint(lg) {
 		max-width: calc(100% + 2 * var(--space-xxl));
 		margin-left: calc(-1 * var(--space-xxl));
+		margin-right: calc(-1 * var(--space-xxl));
 
-		// check for nesting
-		.alignwide:not(.alignfull) {
+		.alignwide {
 			max-width: calc(100% + var(--space-xxl));
-			margin-left: auto;
 		}
+	}
+
+	.alignwide {
+		margin-left: auto;
+		margin-right: auto;
 	}
 }
 
